--- a/scss/_style.scss
+++ b/scss/_style.scss
@@ -1,6 +1,11 @@
+html
+{
+	background-color: #111;
+}
+
 header
 {
-	background-color: #222;
+	background-color: #221111 - 20;
 	border-bottom: 2px solid #666;
 	font-family: 'Roboto Slab', serif;
 	
@@ -8,7 +13,7 @@ header
 	h1
 	{
 		font-weight: bold;
-		color: #fff;
+		color: #552211;
 		font-family: 'Roboto Slab', serif;
 	}
 }
@@ -17,26 +22,32 @@ main
 {
 	background-color: #BA4100;
 	height: 90%;
-	background-image: url(../img/blue_sky.jpg);
-
+	background: url(../img/vr.jpg) no-repeat center center fixed; 
+  	-webkit-background-size: cover;
+  	-moz-background-size: cover;
+  	-o-background-size: cover;
+ 	background-size: cover;
 
 	.functional
 	{
 		a
 		{
 			margin-top: 30px;
-			border: 6px solid #179CE8;
+			transition: border 0.25s ease, color 0.25s ease;
+			border: 6px solid #cc5522;
 			color: #fff;
 			display: block;
 			padding: .75em 0;
 			font-weight: bold;
 			font-family: 'Roboto Slab', serif;
-			background-color: #333;
+			background-color: #221111 - 20;
 		}
 
 		a:hover
 		{
-			border: 6px solid #bada55;
+			transition: border 0.25s ease, color 0.25s ease;
+			border: 6px solid #534F36;
+			color: #534F36 + 70;
 		}
 	}
 
@@ -45,18 +56,21 @@ main
 		a
 		{
 			margin-top: 30px;
-			border: 6px solid #26EFFF;
+			transition: border 0.25s ease;
+			border: 6px solid #cc8877;
 			color: #fff;
 			display: block;
 			padding: .75em 0;
 			font-weight: bold;
 			font-family: 'Roboto Slab', serif;
-			background-color: #333;
+			background-color: #221111 - 20;
 		}
 
 		a:hover
 		{
-			border: 6px solid #bada55;
+			transition: border 0.25s ease, color 0.25s ease;
+			border: 6px solid #534F36;
+			color: #534F36 + 70;
 		}
 	}
 
@@ -65,18 +79,21 @@ main
 		a
 		{
 			margin-top: 30px;
-			border: 6px solid #17E8B7;
+			transition: border 0.25s ease;
+			border: 6px solid #ee9955;
 			color: #fff;
 			display: block;
 			padding: .75em 0;
 			font-weight: bold;
 			font-family: 'Roboto Slab', serif;
-			background-color: #333;
+			background-color: #221111 - 20;
 		}
 
 		a:hover
 		{
-			border: 6px solid #bada55;
+			transition: border 0.25s ease, color 0.25s ease;
+			border: 6px solid #534F36;
+			color: #534F36 + 70;
 		}
 	}
 
@@ -85,18 +102,21 @@ main
 		a
 		{
 			margin-top: 30px;
-			border: 6px solid #19FF81;
+			transition: border 0.25s ease;
+			border: 6px solid #ffddbb;
 			color: #fff;
 			display: block;
 			padding: .75em 0;
 			font-weight: bold;
 			font-family: 'Roboto Slab', serif;
-			background-color: #333;
+			background-color: #221111 - 20;
 		}
 
 		a:hover
 		{
-			border: 6px solid #bada55;
+			transition: border 0.25s ease, color 0.25s ease;
+			border: 6px solid #534F36;
+			color: #534F36 + 70;
 		}
 	}
 
@@ -105,18 +125,21 @@ main
 		a
 		{
 			margin-top: 30px;
+			transition: border 0.25s ease;
 			border: 6px solid #19FF81;
 			color: #fff;
 			display: block;
 			padding: .75em 0;
 			font-weight: bold;
 			font-family: 'Roboto Slab', serif;
-			background-color: #333;
+			background-color: #221111 - 20;
 		}
 
 		a:hover
 		{
-			border: 6px solid #bada55;
+			transition: border 0.25s ease, color 0.25s ease;
+			border: 6px solid #534F36;
+			color: #534F36 + 70;
 		}
 	}
 }
@@ -125,9 +148,9 @@ footer
 {
 	position: fixed;
 	bottom: 0;
-	background-color: #222;
+	background-color: #221111 - 20;
 	width: 100%;
-	color: #fff;
+	color: #552211;
 	padding: 2em 0 1em 0;
 	border-top: 2px solid #666;
 	font-family: 'Roboto Slab', serif;
